lab4/7-src/syntax.output
Terminals unused in grammar

    NEWLINE
    NAGATE
    LOWER_THAN_RB


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier FunDec SEMI
    8       | Specifier error

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList

   11 Specifier: TYPE
   12          | StructSpecifier

   13 StructSpecifier: STRUCT OptTag LC DefList RC
   14                | STRUCT Tag
   15                | STRUCT OptTag LC error RC

   16 OptTag: ID
   17       | %empty

   18 Tag: ID

   19 VarDec: ID
   20       | VarDec LB INT RB
   21       | VarDec LB ID RB
   22       | VarDec LB error RB
   23       | VarDec LB ID error

   24 FunDec: ID LP VarList RP
   25       | ID LP RP

   26 VarList: ParamDec COMMA VarList
   27        | ParamDec

   28 ParamDec: Specifier VarDec

   29 CompSt: LC DefList StmtList RC

   30 StmtList: Stmt StmtList
   31         | %empty

   32 Stmt: Exp SEMI
   33     | Exp error
   34     | CompSt
   35     | RETURN Exp SEMI
   36     | IF LP Exp RP Stmt
   37     | IF LP Exp RP Stmt ELSE Stmt
   38     | WHILE LP Exp RP Stmt
   39     | IF LP error RP Stmt
   40     | IF LP error RP Stmt ELSE Stmt
   41     | WHILE LP error RP Stmt
   42     | RETURN Exp error

   43 DefList: Def DefList
   44        | %empty

   45 Def: Specifier DecList SEMI
   46    | Specifier error SEMI
   47    | error DecList SEMI

   48 DecList: Dec
   49        | Dec COMMA DecList

   50 Dec: VarDec
   51    | VarDec ASSIGNOP Exp
   52    | VarDec ASSIGNOP error

   53 Exp: Exp ASSIGNOP Exp
   54    | Exp ASSIGNOP error
   55    | Exp AND Exp
   56    | Exp OR Exp
   57    | Exp RELOP Exp
   58    | Exp PLUS Exp
   59    | Exp MINUS Exp
   60    | Exp STAR Exp
   61    | Exp DIV Exp
   62    | LP Exp RP
   63    | MINUS Exp
   64    | NOT Exp
   65    | ID LP Args RP
   66    | ID LP RP
   67    | Exp LB Exp RB
   68    | Exp DOT ID
   69    | ID
   70    | INT
   71    | FLOAT
   72    | LP error RP
   73    | ID LP error RP
   74    | Exp LB error RB

   75 Args: Exp COMMA Args
   76     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 8 15 22 23 33 39 40 41 42 46 47 52 54 72 73 74
    INT (258) 20 70
    FLOAT (259) 71
    TYPE (260) 11
    NEWLINE (261)
    ID (262) 16 18 19 21 23 24 25 65 66 68 69 73
    SEMI (263) 4 5 7 32 35 45 46 47
    COMMA (264) 10 26 49 75
    DOT (265) 68
    ASSIGNOP (266) 51 52 53 54
    RELOP (267) 57
    PLUS (268) 58
    MINUS (269) 59 63
    STAR (270) 60
    DIV (271) 61
    AND (272) 55
    OR (273) 56
    NOT (274) 64
    LP (275) 24 25 36 37 38 39 40 41 62 65 66 72 73
    RP (276) 24 25 36 37 38 39 40 41 62 65 66 72 73
    LB (277) 20 21 22 23 67 74
    RB (278) 20 21 22 67 74
    LC (279) 13 15 29
    RC (280) 13 15 29
    STRUCT (281) 13 14 15
    RETURN (282) 35 42
    IF (283) 36 37 39 40
    ELSE (284) 37 40
    WHILE (285) 38 41
    NAGATE (286)
    LOWER_THAN_RB (287)
    LOWER_THAN_ELSE (288)


Nonterminals, with rules where they appear

    $accept (34)
        on left: 0
    Program (35)
        on left: 1
        on right: 0
    ExtDefList (36)
        on left: 2 3
        on right: 1 2
    ExtDef (37)
        on left: 4 5 6 7 8
        on right: 2
    ExtDecList (38)
        on left: 9 10
        on right: 4 10
    Specifier (39)
        on left: 11 12
        on right: 4 5 6 7 8 28 45 46
    StructSpecifier (40)
        on left: 13 14 15
        on right: 12
    OptTag (41)
        on left: 16 17
        on right: 13 15
    Tag (42)
        on left: 18
        on right: 14
    VarDec (43)
        on left: 19 20 21 22 23
        on right: 9 10 20 21 22 23 28 50 51 52
    FunDec (44)
        on left: 24 25
        on right: 6 7
    VarList (45)
        on left: 26 27
        on right: 24 26
    ParamDec (46)
        on left: 28
        on right: 26 27
    CompSt (47)
        on left: 29
        on right: 6 34
    StmtList (48)
        on left: 30 31
        on right: 29 30
    Stmt (49)
        on left: 32 33 34 35 36 37 38 39 40 41 42
        on right: 30 36 37 38 39 40 41
    DefList (50)
        on left: 43 44
        on right: 13 29 43
    Def (51)
        on left: 45 46 47
        on right: 43
    DecList (52)
        on left: 48 49
        on right: 45 47 49
    Dec (53)
        on left: 50 51 52
        on right: 48 49
    Exp (54)
        on left: 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74
        on right: 32 33 35 36 37 38 42 51 53 54 55 56 57 58 59 60 61 62 63 64 67 68 74 75 76
    Args (55)
        on left: 75 76
        on right: 65 75


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

   11 Specifier: TYPE .

    $default  reduce using rule 11 (Specifier)


State 2

   13 StructSpecifier: STRUCT . OptTag LC DefList RC
   14                | STRUCT . Tag
   15                | STRUCT . OptTag LC error RC

    ID  shift, and go to state 8

    $default  reduce using rule 17 (OptTag)

    OptTag  go to state 9
    Tag     go to state 10


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 12
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . FunDec SEMI
    8       | Specifier . error

    error  shift, and go to state 13
    ID     shift, and go to state 14
    SEMI   shift, and go to state 15

    ExtDecList  go to state 16
    VarDec      go to state 17
    FunDec      go to state 18


State 7

   12 Specifier: StructSpecifier .

    $default  reduce using rule 12 (Specifier)


State 8

   16 OptTag: ID .
   18 Tag: ID .

    LC        reduce using rule 16 (OptTag)
    $default  reduce using rule 18 (Tag)


State 9

   13 StructSpecifier: STRUCT OptTag . LC DefList RC
   15                | STRUCT OptTag . LC error RC

    LC  shift, and go to state 19


State 10

   14 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 14 (StructSpecifier)


State 11

    0 $accept: Program $end .

    $default  accept


State 12

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 13

    8 ExtDef: Specifier error .

    $default  reduce using rule 8 (ExtDef)


State 14

   19 VarDec: ID .
   24 FunDec: ID . LP VarList RP
   25       | ID . LP RP

    LP  shift, and go to state 20

    $default  reduce using rule 19 (VarDec)


State 15

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 16

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 21


State 17

    9 ExtDecList: VarDec .
   10           | VarDec . COMMA ExtDecList
   20 VarDec: VarDec . LB INT RB
   21       | VarDec . LB ID RB
   22       | VarDec . LB error RB
   23       | VarDec . LB ID error

    COMMA  shift, and go to state 22
    LB     shift, and go to state 23

    $default  reduce using rule 9 (ExtDecList)


State 18

    6 ExtDef: Specifier FunDec . CompSt
    7       | Specifier FunDec . SEMI

    SEMI  shift, and go to state 24
    LC    shift, and go to state 25

    CompSt  go to state 26


State 19

   13 StructSpecifier: STRUCT OptTag LC . DefList RC
   15                | STRUCT OptTag LC . error RC

    error   shift, and go to state 27
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    RC  reduce using rule 44 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 29
    Def              go to state 30


State 20

   24 FunDec: ID LP . VarList RP
   25       | ID LP . RP

    TYPE    shift, and go to state 1
    RP      shift, and go to state 31
    STRUCT  shift, and go to state 2

    Specifier        go to state 32
    StructSpecifier  go to state 7
    VarList          go to state 33
    ParamDec         go to state 34


State 21

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 22

   10 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 35

    ExtDecList  go to state 36
    VarDec      go to state 17


State 23

   20 VarDec: VarDec LB . INT RB
   21       | VarDec LB . ID RB
   22       | VarDec LB . error RB
   23       | VarDec LB . ID error

    error  shift, and go to state 37
    INT    shift, and go to state 38
    ID     shift, and go to state 39


State 24

    7 ExtDef: Specifier FunDec SEMI .

    $default  reduce using rule 7 (ExtDef)


State 25

   29 CompSt: LC . DefList StmtList RC

    error   shift, and go to state 40
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    INT     reduce using rule 44 (DefList)
    FLOAT   reduce using rule 44 (DefList)
    ID      reduce using rule 44 (DefList)
    MINUS   reduce using rule 44 (DefList)
    NOT     reduce using rule 44 (DefList)
    LP      reduce using rule 44 (DefList)
    LC      reduce using rule 44 (DefList)
    RC      reduce using rule 44 (DefList)
    RETURN  reduce using rule 44 (DefList)
    IF      reduce using rule 44 (DefList)
    WHILE   reduce using rule 44 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 41
    Def              go to state 30


State 26

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 27

   15 StructSpecifier: STRUCT OptTag LC error . RC
   47 Def: error . DecList SEMI

    ID  shift, and go to state 35
    RC  shift, and go to state 42

    VarDec   go to state 43
    DecList  go to state 44
    Dec      go to state 45


State 28

   45 Def: Specifier . DecList SEMI
   46    | Specifier . error SEMI

    error  shift, and go to state 46
    ID     shift, and go to state 35

    VarDec   go to state 43
    DecList  go to state 47
    Dec      go to state 45


State 29

   13 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 48


State 30

   43 DefList: Def . DefList

    error   shift, and go to state 40
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    INT     reduce using rule 44 (DefList)
    FLOAT   reduce using rule 44 (DefList)
    ID      reduce using rule 44 (DefList)
    MINUS   reduce using rule 44 (DefList)
    NOT     reduce using rule 44 (DefList)
    LP      reduce using rule 44 (DefList)
    LC      reduce using rule 44 (DefList)
    RC      reduce using rule 44 (DefList)
    RETURN  reduce using rule 44 (DefList)
    IF      reduce using rule 44 (DefList)
    WHILE   reduce using rule 44 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 49
    Def              go to state 30


State 31

   25 FunDec: ID LP RP .

    $default  reduce using rule 25 (FunDec)


State 32

   28 ParamDec: Specifier . VarDec

    ID  shift, and go to state 35

    VarDec  go to state 50


State 33

   24 FunDec: ID LP VarList . RP

    RP  shift, and go to state 51


State 34

   26 VarList: ParamDec . COMMA VarList
   27        | ParamDec .

    COMMA  shift, and go to state 52

    $default  reduce using rule 27 (VarList)


State 35

   19 VarDec: ID .

    $default  reduce using rule 19 (VarDec)


State 36

   10 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 10 (ExtDecList)


State 37

   22 VarDec: VarDec LB error . RB

    RB  shift, and go to state 53


State 38

   20 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 54


State 39

   21 VarDec: VarDec LB ID . RB
   23       | VarDec LB ID . error

    error  shift, and go to state 55
    RB     shift, and go to state 56


State 40

   47 Def: error . DecList SEMI

    ID  shift, and go to state 35

    VarDec   go to state 43
    DecList  go to state 44
    Dec      go to state 45


State 41

   29 CompSt: LC DefList . StmtList RC

    INT     shift, and go to state 57
    FLOAT   shift, and go to state 58
    ID      shift, and go to state 59
    MINUS   shift, and go to state 60
    NOT     shift, and go to state 61
    LP      shift, and go to state 62
    LC      shift, and go to state 25
    RETURN  shift, and go to state 63
    IF      shift, and go to state 64
    WHILE   shift, and go to state 65

    $default  reduce using rule 31 (StmtList)

    CompSt    go to state 66
    StmtList  go to state 67
    Stmt      go to state 68
    Exp       go to state 69


State 42

   15 StructSpecifier: STRUCT OptTag LC error RC .

    $default  reduce using rule 15 (StructSpecifier)


State 43

   20 VarDec: VarDec . LB INT RB
   21       | VarDec . LB ID RB
   22       | VarDec . LB error RB
   23       | VarDec . LB ID error
   50 Dec: VarDec .
   51    | VarDec . ASSIGNOP Exp
   52    | VarDec . ASSIGNOP error

    ASSIGNOP  shift, and go to state 70
    LB        shift, and go to state 23

    $default  reduce using rule 50 (Dec)


State 44

   47 Def: error DecList . SEMI

    SEMI  shift, and go to state 71


State 45

   48 DecList: Dec .
   49        | Dec . COMMA DecList

    COMMA  shift, and go to state 72

    $default  reduce using rule 48 (DecList)


State 46

   46 Def: Specifier error . SEMI

    SEMI  shift, and go to state 73


State 47

   45 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 74


State 48

   13 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 13 (StructSpecifier)


State 49

   43 DefList: Def DefList .

    $default  reduce using rule 43 (DefList)


State 50

   20 VarDec: VarDec . LB INT RB
   21       | VarDec . LB ID RB
   22       | VarDec . LB error RB
   23       | VarDec . LB ID error
   28 ParamDec: Specifier VarDec .

    LB  shift, and go to state 23

    $default  reduce using rule 28 (ParamDec)


State 51

   24 FunDec: ID LP VarList RP .

    $default  reduce using rule 24 (FunDec)


State 52

   26 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 32
    StructSpecifier  go to state 7
    VarList          go to state 75
    ParamDec         go to state 34


State 53

   22 VarDec: VarDec LB error RB .

    $default  reduce using rule 22 (VarDec)


State 54

   20 VarDec: VarDec LB INT RB .

    $default  reduce using rule 20 (VarDec)


State 55

   23 VarDec: VarDec LB ID error .

    $default  reduce using rule 23 (VarDec)


State 56

   21 VarDec: VarDec LB ID RB .

    $default  reduce using rule 21 (VarDec)


State 57

   70 Exp: INT .

    $default  reduce using rule 70 (Exp)


State 58

   71 Exp: FLOAT .

    $default  reduce using rule 71 (Exp)


State 59

   65 Exp: ID . LP Args RP
   66    | ID . LP RP
   69    | ID .
   73    | ID . LP error RP

    LP  shift, and go to state 76

    $default  reduce using rule 69 (Exp)


State 60

   63 Exp: MINUS . Exp

    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 77


State 61

   64 Exp: NOT . Exp

    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 78


State 62

   62 Exp: LP . Exp RP
   72    | LP . error RP

    error  shift, and go to state 79
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 80


State 63

   35 Stmt: RETURN . Exp SEMI
   42     | RETURN . Exp error

    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 81


State 64

   36 Stmt: IF . LP Exp RP Stmt
   37     | IF . LP Exp RP Stmt ELSE Stmt
   39     | IF . LP error RP Stmt
   40     | IF . LP error RP Stmt ELSE Stmt

    LP  shift, and go to state 82


State 65

   38 Stmt: WHILE . LP Exp RP Stmt
   41     | WHILE . LP error RP Stmt

    LP  shift, and go to state 83


State 66

   34 Stmt: CompSt .

    $default  reduce using rule 34 (Stmt)


State 67

   29 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 84


State 68

   30 StmtList: Stmt . StmtList

    INT     shift, and go to state 57
    FLOAT   shift, and go to state 58
    ID      shift, and go to state 59
    MINUS   shift, and go to state 60
    NOT     shift, and go to state 61
    LP      shift, and go to state 62
    LC      shift, and go to state 25
    RETURN  shift, and go to state 63
    IF      shift, and go to state 64
    WHILE   shift, and go to state 65

    $default  reduce using rule 31 (StmtList)

    CompSt    go to state 66
    StmtList  go to state 85
    Stmt      go to state 68
    Exp       go to state 69


State 69

   32 Stmt: Exp . SEMI
   33     | Exp . error
   53 Exp: Exp . ASSIGNOP Exp
   54    | Exp . ASSIGNOP error
   55    | Exp . AND Exp
   56    | Exp . OR Exp
   57    | Exp . RELOP Exp
   58    | Exp . PLUS Exp
   59    | Exp . MINUS Exp
   60    | Exp . STAR Exp
   61    | Exp . DIV Exp
   67    | Exp . LB Exp RB
   68    | Exp . DOT ID
   74    | Exp . LB error RB

    error     shift, and go to state 86
    SEMI      shift, and go to state 87
    DOT       shift, and go to state 88
    ASSIGNOP  shift, and go to state 89
    RELOP     shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    AND       shift, and go to state 95
    OR        shift, and go to state 96
    LB        shift, and go to state 97


State 70

   51 Dec: VarDec ASSIGNOP . Exp
   52    | VarDec ASSIGNOP . error

    error  shift, and go to state 98
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 99


State 71

   47 Def: error DecList SEMI .

    $default  reduce using rule 47 (Def)


State 72

   49 DecList: Dec COMMA . DecList

    ID  shift, and go to state 35

    VarDec   go to state 43
    DecList  go to state 100
    Dec      go to state 45


State 73

   46 Def: Specifier error SEMI .

    $default  reduce using rule 46 (Def)


State 74

   45 Def: Specifier DecList SEMI .

    $default  reduce using rule 45 (Def)


State 75

   26 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 26 (VarList)


State 76

   65 Exp: ID LP . Args RP
   66    | ID LP . RP
   73    | ID LP . error RP

    error  shift, and go to state 101
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62
    RP     shift, and go to state 102

    Exp   go to state 103
    Args  go to state 104


State 77

   53 Exp: Exp . ASSIGNOP Exp
   54    | Exp . ASSIGNOP error
   55    | Exp . AND Exp
   56    | Exp . OR Exp
   57    | Exp . RELOP Exp
   58    | Exp . PLUS Exp
   59    | Exp . MINUS Exp
   60    | Exp . STAR Exp
   61    | Exp . DIV Exp
   63    | MINUS Exp .
   67    | Exp . LB Exp RB
   68    | Exp . DOT ID
   74    | Exp . LB error RB

    DOT   shift, and go to state 88
    STAR  shift, and go to state 93
    DIV   shift, and go to state 94
    LB    shift, and go to state 97

    $default  reduce using rule 63 (Exp)


State 78

   53 Exp: Exp . ASSIGNOP Exp
   54    | Exp . ASSIGNOP error
   55    | Exp . AND Exp
   56    | Exp . OR Exp
   57    | Exp . RELOP Exp
   58    | Exp . PLUS Exp
   59    | Exp . MINUS Exp
   60    | Exp . STAR Exp
   61    | Exp . DIV Exp
   64    | NOT Exp .
   67    | Exp . LB Exp RB
   68    | Exp . DOT ID
   74    | Exp . LB error RB

    DOT  shift, and go to state 88
    LB   shift, and go to state 97

    $default  reduce using rule 64 (Exp)


State 79

   72 Exp: LP error . RP

    RP  shift, and go to state 105


State 80

   53 Exp: Exp . ASSIGNOP Exp
   54    | Exp . ASSIGNOP error
   55    | Exp . AND Exp
   56    | Exp . OR Exp
   57    | Exp . RELOP Exp
   58    | Exp . PLUS Exp
   59    | Exp . MINUS Exp
   60    | Exp . STAR Exp
   61    | Exp . DIV Exp
   62    | LP Exp . RP
   67    | Exp . LB Exp RB
   68    | Exp . DOT ID
   74    | Exp . LB error RB

    DOT       shift, and go to state 88
    ASSIGNOP  shift, and go to state 89
    RELOP     shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    AND       shift, and go to state 95
    OR        shift, and go to state 96
    RP        shift, and go to state 106
    LB        shift, and go to state 97


State 81

   35 Stmt: RETURN Exp . SEMI
   42     | RETURN Exp . error
   53 Exp: Exp . ASSIGNOP Exp
   54    | Exp . ASSIGNOP error
   55    | Exp . AND Exp
   56    | Exp . OR Exp
   57    | Exp . RELOP Exp
   58    | Exp . PLUS Exp
   59    | Exp . MINUS Exp
   60    | Exp . STAR Exp
   61    | Exp . DIV Exp
   67    | Exp . LB Exp RB
   68    | Exp . DOT ID
   74    | Exp . LB error RB

    error     shift, and go to state 107
    SEMI      shift, and go to state 108
    DOT       shift, and go to state 88
    ASSIGNOP  shift, and go to state 89
    RELOP     shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    AND       shift, and go to state 95
    OR        shift, and go to state 96
    LB        shift, and go to state 97


State 82

   36 Stmt: IF LP . Exp RP Stmt
   37     | IF LP . Exp RP Stmt ELSE Stmt
   39     | IF LP . error RP Stmt
   40     | IF LP . error RP Stmt ELSE Stmt

    error  shift, and go to state 109
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 110


State 83

   38 Stmt: WHILE LP . Exp RP Stmt
   41     | WHILE LP . error RP Stmt

    error  shift, and go to state 111
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 112


State 84

   29 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 29 (CompSt)


State 85

   30 StmtList: Stmt StmtList .

    $default  reduce using rule 30 (StmtList)


State 86

   33 Stmt: Exp error .

    $default  reduce using rule 33 (Stmt)


State 87

   32 Stmt: Exp SEMI .

    $default  reduce using rule 32 (Stmt)


State 88

   68 Exp: Exp DOT . ID

    ID  shift, and go to state 113


State 89

   53 Exp: Exp ASSIGNOP . Exp
   54    | Exp ASSIGNOP . error

    error  shift, and go to state 114
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 115


State 90

   57 Exp: Exp RELOP . Exp

    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 116


State 91

   58 Exp: Exp PLUS . Exp

    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 117


State 92

   59 Exp: Exp MINUS . Exp

    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 118


State 93

   60 Exp: Exp STAR . Exp

    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 119


State 94

   61 Exp: Exp DIV . Exp

    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 120


State 95

   55 Exp: Exp AND . Exp

    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 121


State 96

   56 Exp: Exp OR . Exp

    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 122


State 97

   67 Exp: Exp LB . Exp RB
   74    | Exp LB . error RB

    error  shift, and go to state 123
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 124


State 98

   52 Dec: VarDec ASSIGNOP error .

    $default  reduce using rule 52 (Dec)


State 99

   51 Dec: VarDec ASSIGNOP Exp .
   53 Exp: Exp . ASSIGNOP Exp
   54    | Exp . ASSIGNOP error
   55    | Exp . AND Exp
   56    | Exp . OR Exp
   57    | Exp . RELOP Exp
   58    | Exp . PLUS Exp
   59    | Exp . MINUS Exp
   60    | Exp . STAR Exp
   61    | Exp . DIV Exp
   67    | Exp . LB Exp RB
   68    | Exp . DOT ID
   74    | Exp . LB error RB

    DOT       shift, and go to state 88
    ASSIGNOP  shift, and go to state 89
    RELOP     shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    AND       shift, and go to state 95
    OR        shift, and go to state 96
    LB        shift, and go to state 97

    $default  reduce using rule 51 (Dec)


State 100

   49 DecList: Dec COMMA DecList .

    $default  reduce using rule 49 (DecList)


State 101

   73 Exp: ID LP error . RP

    RP  shift, and go to state 125


State 102

   66 Exp: ID LP RP .

    $default  reduce using rule 66 (Exp)


State 103

   53 Exp: Exp . ASSIGNOP Exp
   54    | Exp . ASSIGNOP error
   55    | Exp . AND Exp
   56    | Exp . OR Exp
   57    | Exp . RELOP Exp
   58    | Exp . PLUS Exp
   59    | Exp . MINUS Exp
   60    | Exp . STAR Exp
   61    | Exp . DIV Exp
   67    | Exp . LB Exp RB
   68    | Exp . DOT ID
   74    | Exp . LB error RB
   75 Args: Exp . COMMA Args
   76     | Exp .

    COMMA     shift, and go to state 126
    DOT       shift, and go to state 88
    ASSIGNOP  shift, and go to state 89
    RELOP     shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    AND       shift, and go to state 95
    OR        shift, and go to state 96
    LB        shift, and go to state 97

    $default  reduce using rule 76 (Args)


State 104

   65 Exp: ID LP Args . RP

    RP  shift, and go to state 127


State 105

   72 Exp: LP error RP .

    $default  reduce using rule 72 (Exp)


State 106

   62 Exp: LP Exp RP .

    $default  reduce using rule 62 (Exp)


State 107

   42 Stmt: RETURN Exp error .

    $default  reduce using rule 42 (Stmt)


State 108

   35 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 35 (Stmt)


State 109

   39 Stmt: IF LP error . RP Stmt
   40     | IF LP error . RP Stmt ELSE Stmt

    RP  shift, and go to state 128


State 110

   36 Stmt: IF LP Exp . RP Stmt
   37     | IF LP Exp . RP Stmt ELSE Stmt
   53 Exp: Exp . ASSIGNOP Exp
   54    | Exp . ASSIGNOP error
   55    | Exp . AND Exp
   56    | Exp . OR Exp
   57    | Exp . RELOP Exp
   58    | Exp . PLUS Exp
   59    | Exp . MINUS Exp
   60    | Exp . STAR Exp
   61    | Exp . DIV Exp
   67    | Exp . LB Exp RB
   68    | Exp . DOT ID
   74    | Exp . LB error RB

    DOT       shift, and go to state 88
    ASSIGNOP  shift, and go to state 89
    RELOP     shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    AND       shift, and go to state 95
    OR        shift, and go to state 96
    RP        shift, and go to state 129
    LB        shift, and go to state 97


State 111

   41 Stmt: WHILE LP error . RP Stmt

    RP  shift, and go to state 130


State 112

   38 Stmt: WHILE LP Exp . RP Stmt
   53 Exp: Exp . ASSIGNOP Exp
   54    | Exp . ASSIGNOP error
   55    | Exp . AND Exp
   56    | Exp . OR Exp
   57    | Exp . RELOP Exp
   58    | Exp . PLUS Exp
   59    | Exp . MINUS Exp
   60    | Exp . STAR Exp
   61    | Exp . DIV Exp
   67    | Exp . LB Exp RB
   68    | Exp . DOT ID
   74    | Exp . LB error RB

    DOT       shift, and go to state 88
    ASSIGNOP  shift, and go to state 89
    RELOP     shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    AND       shift, and go to state 95
    OR        shift, and go to state 96
    RP        shift, and go to state 131
    LB        shift, and go to state 97


State 113

   68 Exp: Exp DOT ID .

    $default  reduce using rule 68 (Exp)


State 114

   54 Exp: Exp ASSIGNOP error .

    $default  reduce using rule 54 (Exp)


State 115
